--- a/src/pages/auth/sign-up/index.astro
+++ b/src/pages/auth/sign-up/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import SignUp from '../../components/SignUp.jsx';
+import Layout from '../../../layouts/Layout.astro';
+import SignUp from '../../../components/SignUp.jsx';
 const api = import.meta.env.AUTH_ROUTE;
 ---
 
