--- a/src/pages/auth/sign-in/index.astro
+++ b/src/pages/auth/sign-in/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import SignIn from '../../components/SignIn.jsx';
+import Layout from '../../../layouts/Layout.astro';
+import SignIn from '../../../components/SignIn.jsx';
 const api = import.meta.env.AUTH_ROUTE;
 ---
 
