Current version is now responsive

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,7 @@ const { PUBLIC_AUTH_ROUTE } = import.meta.env;
 		--min-text: 12px;
 		--max-text: 18px;
 		--black: rgb(30, 30, 30);
+		--red: #d01111;
 	}
 	html,
 	body {
