--- a/src/pages/auth/new-password/index.astro
+++ b/src/pages/auth/new-password/index.astro
@@ -4,6 +4,6 @@ import NewPassword from '../../../components/NewPassword.jsx';
 const api = import.meta.env.AUTH_ROUTE;
 ---
 
-<Layout subTitle="Change Password">
+<Layout subTitle="New Password">
     <NewPassword api={api} client:only />
 </Layout>
