--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Slider from '../components/Slider.jsx';
 import Search from '../components/Search.jsx';
 ---
-<Layout subTitle="Home">
+<Layout subTitle="Wish List">
 	<div id="main-content">
 		<Slider />
 		<Search />
