--- a/src/pages/search-product/index.astro
+++ b/src/pages/search-product/index.astro
@@ -1,9 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import Search_product from '../../components/Search_product.jsx';
-
 ---
-
-<Layout title="Search Product">
+<Layout subTitle="Search Product">
   <Search_product client:only />
 </Layout>
