--- a/src/pages/Wishlist/index.astro
+++ b/src/pages/Wishlist/index.astro
@@ -1,9 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import Wishlist from '../../components/Wishlist.jsx';
-
 ---
-
-<Layout title="Wishlist">
+<Layout subTitle="Wishlist">
   <Wishlist client:load />
 </Layout>
