--- a/src/pages/courriers/index.astro
+++ b/src/pages/courriers/index.astro
@@ -2,7 +2,6 @@
 import Layout from '../../layouts/Layout.astro';
 import Courriers from '../../components/Courriers.jsx';
 ---
-
-<Layout title="Courriers">
-  <Courriers  client:only />
+<Layout subTitle="Courriers">
+  <Courriers client:only />
 </Layout>
