--- a/src/styles/Courrier.css
+++ b/src/styles/Courrier.css
@@ -1,22 +1,8 @@
-body {
-  margin: 0;
-  padding: 0;
-  min-width: 100vw; 
-  min-height: 100vh;
-  overflow: hidden; 
-}
-
 #courier-container {
     display: flex;
-    height: calc(100vh - 64px);
-    overflow: hidden;
+    height: calc(100dvh - 10dvh - 30px);
     width: 100%;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
 }
-
-
 
 #sidebar {
     width: 35%; 
@@ -29,10 +15,12 @@ body {
     background: #fff;
     box-shadow: 2px 0 5px rgba(0,0,0,0.05);
     z-index: 2; 
+    box-sizing: border-box;
 }
-#sidebar h1 { font-size: 2rem; margin-bottom: 10px; }
-#sidebar h2 { font-size: 1.2rem; margin-bottom: 5px; }
-#subtitle { color: #666; font-size: 0.9rem; margin-bottom: 20px; line-height: 1.4; }
+#sidebar h2 { font-size: clamp(var(--min-subtitle), var(--subtitle), var(--max-subtitle)); margin-bottom: 10px; }
+#subtitle { color: #666; font-size: clamp(var(--min-text), var(--text), var(--max-text)); margin-bottom: 20px; line-height: 1.4; }
+
+input{ font-size: clamp(var(--min-text), var(--text), var(--max-text)); padding: 10px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; width: 100%; box-sizing: border-box; }
 
 #Line {
     border: 0;
@@ -40,7 +28,7 @@ body {
     margin: 20px 0;
 }
 
-#second-block { margin-bottom: 30px; color: #555; font-size: 0.9rem; }
+#second-block { margin-bottom: 30px; color: #555; font-size: clamp(var(--min-text), var(--text), var(--max-text)); }
 
 /*Puntos*/
 #dots { display: flex; gap: 5px; margin-bottom: 30px; }
@@ -49,13 +37,13 @@ body {
 .locations-list {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    /* gap: 10px; */
 }
 
 .location-item {
     display: flex;
     gap: 15px;
-    padding: 15px;
+    padding: 10px;
     align-items: flex-start;
     cursor: pointer; 
     border-radius: 8px;
@@ -85,11 +73,10 @@ body {
 }
 
 .location-text-container p {
-    font-size: 0.85rem;
+    font-size: clamp(var(--min-text), var(--text), var(--max-text));
     color: #666;
     margin-top: 5px;
 }
-
 
 #map-container {
     flex: 1; 
@@ -98,7 +85,7 @@ body {
     width: 100%;
     overflow: hidden;
 }
-button {
+#courier-container button {
   padding: 10px 20px;
   background: #e21010;
   border: none;
