--- a/src/pages/auth/sign-up/index.astro
+++ b/src/pages/auth/sign-up/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../../../layouts/Layout.astro';
 import SignUp from '../../../components/SignUp.jsx';
-const api = import.meta.env.AUTH_ROUTE;
+const api = import.meta.env.PUBLIC_AUTH_ROUTE;
 ---
 <Layout subTitle="Sign Up">
     <SignUp api={api} client:load />
