Testing API, ignore the SignIn.jsx file changes.

--- a/src/pages/auth/sign-in/index.astro
+++ b/src/pages/auth/sign-in/index.astro
@@ -4,5 +4,5 @@ import SignIn from '../../../components/SignIn.jsx';
 const api = import.meta.env.AUTH_ROUTE;
 ---
 <Layout subTitle="Sign In">
-    <SignIn api={api} client:load />
+    <SignIn client:load />
 </Layout>
