--- a/src/pages/auth/sign-up/index.astro
+++ b/src/pages/auth/sign-up/index.astro
@@ -4,5 +4,5 @@ import SignUp from '../../../components/SignUp.jsx';
 const api = import.meta.env.PUBLIC_AUTH_ROUTE;
 ---
 <Layout subTitle="Sign Up">
-    <SignUp api={api} client:load />
+    <SignUp client:load />
 </Layout>
