--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -15,6 +15,7 @@ header{
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
+        align-items: center;
         width: 50%;
         & button{
             width: 100px;
@@ -30,6 +31,17 @@ header{
             & a{
                 text-decoration: none;
                 color: var(--black);
+            }
+        }
+        & #profile-button{
+            width: 40px;
+            height: 40px;
+            padding: 0;
+            background-color: transparent;
+            & img{
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
             }
         }
         & button:hover{
