--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,18 +5,17 @@ import Search from '../components/Search.jsx';
 ---
 <Layout subTitle="Wish List">
 	<div id="main-content">
-		<Slider />
-		<Search />
+		<Slider client:only="react"/>
+		<Search client:only="react"/>
 	</div>
 </Layout>
 <style>
 	#main-content{
-		display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-		grid-template-rows: 20px repeat(5, 1fr) 20px;
-		gap: 10px;
-        width: 100%;
-        height: 100%;
-		min-height: 200px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 5dvh;
+		width: 100dvw;
+		height: 210dvh;
 	}
 </style>
