--- a/src/styles/Search_product.css
+++ b/src/styles/Search_product.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 70dvh;
 }
 #Search{
   width: 80%;
@@ -18,6 +19,7 @@ h2 {
   text-align: center;
   margin-bottom: 30px;
   font-size: clamp(var(--min-title), var(--title), var(--max-title));
+  font-weight: bold;
 }
 #search-box {
   display: flex;
