--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -7,7 +7,7 @@
 }
 .app-container {
     width: 90%;
-    height: 90%;
+    height: 80dvh;
     display: flex;
     font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     margin: auto;
